# claims_intelligence_platform

./: .gitignore  Dockerfile  METHODOLOGY.md  README.md  pyproject.toml  requirements.txt  train.py
docs/: index.html
notebooks/: test_notebook.ipynb
src/claims/: config.py  main.py
src/claims/api/: dependencies.py  middleware.py
src/claims/api/routes/: analytics.py  claims.py  health.py
src/claims/data/: loader.py  preprocessor.py  synthesizer.py
src/claims/experimentation/: ab_testing.py
src/claims/ml/: anomaly_detector.py  approval_classifier.py  cost_predictor.py  risk_segmentation.py
src/claims/model/: schemas.py
src/claims/monitoring/: metrics.py  model_monitor.py
src/claims/nlp/: entity_extractor.py  icd_classifier.py  note_processor.py
src/claims/visualization/: dashboard.py
tests/: conftest.py  test_api.py  test_ml.py  test_nlp.py
